# FRICP_3D_picking

./: CMakeLists.txt
src/: euler.h  main.cpp  nanoflann.hpp
src/FRICP/: CloudMatch.cpp  CloudMatch.h  FRICP.h  ICP.h  ThreadPool.h
test/: maincar.cpp  maindoor.cpp
